# aiohttp-rate-limiter

./: README.rst  pyproject.toml
aiohttp_rate_limiter/: client.py
tests/: test_aiohttp_rate_limiter.py
